--- a/src/EasyStack.DotNet.Redis.Solution/EasyStack.DotNet.Redis.Tests/EasyStack.DotNet.Redis.Tests.csproj
+++ b/src/EasyStack.DotNet.Redis.Solution/EasyStack.DotNet.Redis.Tests/EasyStack.DotNet.Redis.Tests.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EasyStack.DotNet.Redis\EasyStack.DotNet.Redis.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
